docs(images): fix image display on mobile

--- a/docs/css/_page.scss
+++ b/docs/css/_page.scss
@@ -4,3 +4,7 @@
     font-weight: bold;
   }
 }
+
+img {
+  max-width: 100%;
+}
